--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,8 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+    sans-serif; */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: rgb(0, 0, 0);
@@ -12,46 +12,40 @@ a{
   align-self: center;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+*{
+  /* color: #ffd300; */
+  color: #ffffffc0;
+  font-family: 'Poppins' , 'Great Vibes', 'Patrick Hand SC';
 }
 
-/* .container {
+.header-aboutme-container {
   display: flex;
   flex-direction: column;
-} */
-
-.headerContainer {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  border: 4px double aqua;
-  background-color: #101212;
-  color: violet;
-  /* font-family: 'Rubik Moonrocks', cursive; */
-  font-size: 1.29em;
-}
-
-.header-img {
-  border: 8px dashed violet;
-  border-radius: 30%;
+  align-items: center;
+  background-image: url('./images/mee.png');
+  background-attachment: fixed;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: top;
+  padding: 50px;
+  filter: drop-shadow(0 0 3rem black)
 }
 
 .headText {
- padding-left: 15px;
-}
-
-.aboutMe {
-  text-align: center;
-  color: violet;
-  /* font-family: 'Rubik Moonrocks', cursive; */
-  border: 4px double aqua;
+  padding-top: 50px;
+  font-family: 'Great Vibes';
+  font-weight: 100;
+  color: #ffffffd5;
+  transform: scale(2);
 }
 
 .aboutText {
-  font-size: 1em;
-  padding: 15px;
+  text-align: center;
+  padding: 50px 50px;
+  font-weight: 100;
+  font-size: 1.6em;
+  color: #fffffff3;
+  margin-bottom: 50px;
 }
 
 .butt {
@@ -62,8 +56,6 @@ code {
   border-radius: 30%;
   border: 4px double aqua;
   background-color: black;
-  color: violet;
-  /* font-family: 'Rubik Moonrocks', cursive; */
   font-size: 1.29em;
   height: 80px;
   width: 140px;
@@ -84,6 +76,7 @@ code {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
+  padding-top: 50px;
 }
 
 .project-whole{
@@ -94,8 +87,6 @@ code {
 .projects {
   text-align: center;
   padding: 8px;
-  color: violet;
-  border: 4px double aqua;
 }
 
 .proj-links{
@@ -106,7 +97,7 @@ code {
   justify-content: center;
   text-align: center;
   padding: 8px;
-  color: violet;
+  
 }
 
 .ghub-link{
@@ -133,7 +124,7 @@ code {
 .contact {
   margin-top: -5px;
   text-align: center;
-  color: violet;
+  
   /* font-family: 'Rubik Moonrocks', cursive; */
   border: 4px double aqua;
 }
