--- a/src/style.css
+++ b/src/style.css
@@ -27,6 +27,8 @@ a{
   display: flex;
   flex-direction: column;
   align-items: center;
+  height: 500px;
+  width: 1000px;
   background-image: url('./images/meee.png');
   background-attachment: fixed;
   background-size: contain;
@@ -134,5 +136,5 @@ a{
   text-align: center;
   
   /* font-family: 'Rubik Moonrocks', cursive; */
-  border: 4px double aqua;
+  /* border: 4px double aqua; */
 }
