--- a/src/style.css
+++ b/src/style.css
@@ -29,7 +29,7 @@ a{
   align-items: center;
   height: 500px;
   width: 1000px;
-  background-image: url('./images/meee.png');
+  background-image: url('./images/meeee.png');
   background-attachment: fixed;
   background-size: contain;
   background-repeat: no-repeat;
@@ -45,6 +45,7 @@ a{
   font-weight: 100;
   color: #ffffff;
   transform: scale(2);
+  padding-top: 100px;
 }
 
 .aboutText {
