--- a/src/style.css
+++ b/src/style.css
@@ -41,7 +41,7 @@ a{
 
 .headText {
   padding-top: 50px;
-  font-family: 'Great Vibes';
+  font-family: 'Autumn Flowers';
   font-weight: 100;
   color: #ffffff;
   transform: scale(2);
@@ -150,7 +150,7 @@ a{
 }
 
 .footer{
-  margin: 25px 0;
+  margin: 45px 0;
   background-color: black;
   text-align: center;
   padding: 8px;
