--- a/src/style.css
+++ b/src/style.css
@@ -192,3 +192,10 @@ a{
   align-content: center;
   text-align: center;
 }
+
+.foot-img{
+  height: 50%;
+  width: 50%;
+  padding: 20px;
+  padding-top: 40px;
+}
